# Masters-Degree

./: .gitignore  Capstone idea 01.docx  Capstone idea 02.docx  Capstone idea 03.docx  Capstone idea 04.docx  Recommended AI Courses.docx  make-wbs.py  notes-506.txt  wbs-sheet.txt  wbs_colored.xlsx  wbs_org_chart  word list.txt
School-MBA-506-81/: README.md  notes.txt  notes2.txt
School-MBA-506-81/Week1/Book/: bookOfProof.tex  preamble.tex
School-MBA-506-81/Week1/assignment/: MBA-506-81_Sherwood_Week 1 Boeing Dreamliner Case.docx  MBA-506-81_Sherwood_Week 1 Self-Assessment Reflection.docx
School-MBA-506-81/Week2/: notes.txt  todo-list.docx
School-MBA-506-81/Week2/Book/: bookOfProof.tex  learnLaTeX.tex  oreilly-chpt2.tex
School-MBA-506-81/Week3/: sort.py
School-MBA-506-81/Week5/: notes.txt
School-MGMT-537-81/: README.md  notes.txt
School-MGMT-537-81/Week1/: notes.txt  todo-list.docx
School-MGMT-537-81/Week2/: notes.txt  todo-list.docx
School-MGMT-537-81/Week6/: notes.txt
wgu-prep/: install.txt
wgu-prep/algorithms/: big_o_cheatsheet.md
wgu-prep/practice/: CMakeLists.txt
wgu-prep/practice/O1/: main.cpp
wgu-prep/practice/O2n/: main.cpp
wgu-prep/practice/OlogN/: main.cpp
wgu-prep/practice/OnLogN/: main.cpp
wgu-prep/practice/OnSquare/: main.cpp
wgu-prep/practice/OofN/: main.cpp
wgu-prep/practice/callStack/: main.cpp
wgu-prep/studyAssignment/: Day1.md  Day10.md  Day11.md  Day12.md  Day13.md  Day14.md  Day15.md  Day16.md  Day17.md  Day18.md  Day19.md  Day2.md  Day20.md  Day21.md  Day22.md  Day23.md  Day24.md  Day25.md  Day26.md  Day27.md  Day28.md  Day29.md  Day3.md  Day30.md  Day31.md  Day32.md  Day33.md  Day34.md  Day35.md  Day36.md  Day37.md  Day38.md  Day39.md  Day4.md  Day40.md  Day41.md  Day42.md  Day43.md  Day44.md  Day45.md  (+18 more)
(+74 files in other folders)
